4/21/2023: Karl
- RequestVerificationCode, InputVerificationCode entities
- LoginResponse, PublicUserProfile, ProfileUpdateResponse now includes IsVerified
- Queries for verification code (sqlc)
- Handles on interface for verification code (HandleCommandRequestVerificationCode, HandleCommandInputVerificationCode)
- route_changeEmail updated to unverify after email change
- route_inputVerificationCode, route_requestVerificationCode

4/16/2023: Karl 
- Added viewUser pipeline, for getting another users user profile and whether they are logged in
- encrypting passwords 

4/14/2023: Karl
- added go-mail dependency for easy mail sending 
- authorized app on gmail and got a token from them for use with sending emails 
- SMTPServer, SMTPass, SMTPUser values in ServerConfig, correspond to SMTP_SERVER, SMTP_USERNAME, SMTP_PASS in .env file. 
- Config validates those .env values exist and sets them in ServConfig 
- Added Store.PwResetRequest to handle database queries needed related to a password reset request. (Deleting old codes, adding the new one) Store also calls the mail function.
- Added database > SendPWResetCode(email, code) to actually dispatch the email. It's in database because that's who will call it. (Relies on Config for settings, otherwise would be in util) 

Week of 4/7/2023: Karl
- Dockerized the go server
- Deployed to the cloud (Kamatera)
- New flags for process start:
   - --nocli={true|false} : starts server with/without cli 
   - --env=my_env_path - starts server with path to .env file 
   - --docker={true|false} - defaults to false. Starts server in docker mode. This configures how the connection to the database is made. 
- Dockerfile builds a custom image of the server 
- Added PostgresDocker to Config to track whether in Docker mode 
- Got rid of second migration. It had problems incrementing the IDs and had some annoying bugs. 


3/29/2023: Karl 
- Ban pipeline finished
- Domain banning and global banning 